# ESP32-SDCard-diagnosis

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  SD_REFERENCE.md
firmware/: CMakeLists.txt  bp.ps1  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.c  config.h  diag_read.c  diag_read.h  diag_write.c  diag_write.h  idf_component.yml  report.c  report.h  sd_decode.c  sd_decode.h  sd_hal.c  sd_hal.h  sd_mfg_db.c  sd_mfg_db.h  sd_registers.h  ui.c  ui.h
tools/: flash.py  fullrun.py  sdmon.py  sniff.py
